@@ -2,7 +2,9 @@ package rover.app.platform.controller;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 import rover.app.platform.vo.RoleVO;
 import rover.app.shared.vo.ListResultMetaVO;
 import rover.app.shared.vo.ListResultVO;
@@ -10,7 +12,6 @@ import rover.core.platform.entity.RoleEntity;
 import rover.core.platform.service.RoleService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/platform/roles")
@@ -27,7 +28,7 @@ public class RolesController {
         List<RoleVO> records = roleService.list()
                 .stream()
                 .map(RoleVO::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return new ListResultVO<>(new ListResultMetaVO(records.size()), records);
     }
@@ -35,6 +36,15 @@ public class RolesController {
     @PostMapping
     public RoleVO create(@RequestBody RoleVO request) {
         RoleEntity entity = roleService.create(request.name());
+
+        return RoleVO.from(entity);
+    }
+
+    @GetMapping("/{id}")
+    public RoleVO get(@PathVariable("id") String id) {
+        var opt = roleService.getById(id);
+
+        RoleEntity entity = opt.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
 
         return RoleVO.from(entity);
     }
