@@ -2,10 +2,9 @@ package rover.app.platform.controller;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Sort;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.http.HttpStatus;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 import rover.app.platform.vo.UserVO;
 import rover.app.shared.vo.ListResultMetaVO;
 import rover.app.shared.vo.ListResultVO;
@@ -13,7 +12,6 @@ import rover.core.platform.entity.UserEntity;
 import rover.core.platform.service.UserService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/platform/users")
@@ -36,8 +34,38 @@ public class UsersController {
 
         List<UserVO> records = page.stream()
                 .map(UserVO::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return new ListResultVO<>(new ListResultMetaVO(page.getTotalElements()), records);
+    }
+
+    @PostMapping
+    public UserVO create(@RequestBody UserVO request) {
+        UserEntity entity = userService.create(request.email(), request.password(), request.name(), request.isEnabled());
+
+        return UserVO.from(entity);
+    }
+
+    @GetMapping("/{id}")
+    public UserVO get(@PathVariable("id") String id) {
+        var opt = userService.getById(id);
+
+        UserEntity entity = opt.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+
+        return UserVO.from(entity);
+    }
+
+    @PostMapping("/{id}")
+    public UserVO update(@PathVariable("id") String id, @RequestBody UserVO request) {
+        UserEntity entity = userService.update(id, request.password(), request.name(), request.isEnabled(), request.isLocked());
+
+        return UserVO.from(entity);
+    }
+
+    @DeleteMapping("/{id}")
+    public UserVO delete(@PathVariable("id") String id) {
+        UserEntity entity = userService.delete(id);
+
+        return UserVO.from(entity);
     }
 }
